samples/_failures_safe/1761604294_e754fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74356a46.c:143:1: error: expected identifier or ‘(’ at end of input
  143 | int
      | ^~~
